# master_web

./: .buildinfo  .gitignore  AGENTS.md  BUILD_GUIDE.md  CNAME  Makefile  README.md  blog.html  contact.html  genindex.html  index.html  objects.inv  privacy.html  pyproject.toml  search.html  searchindex.js  serve.sh  sitemap.xml  style.css
.github/workflows/: deploy.yml
_sources/: blog.rst.txt  privacy.rst.txt
blog/: 2023.html  2024.html  2025.html  2026.html  archive.html  atom.xml  author.html  drafts.html  language.html  location.html  tag.html
blog/2023/: git-branch-script.html
blog/2024/: python-sqlalchemy-lambda-admin.html
blog/2025/: ai-pair-programming-htmx.html  lambda-async-utility.html  litestar-polyfactory-geometry.html  litestar-ssr-lambda.html  sqlspec-orm.html
blog/2026/: flask-sqlspec-crud.html
blog/author/: httpssion908tech.html
blog/language/: ja.html
blog/location/: blog2023.html  blog2024.html  blog2025.html  blog2026.html
blog/tag/: ai.html  amazonq.html  aws.html  crud.html  flask.html  geometry.html  git.html  htmx.html  jinja2.html  lambda.html  litestar.html  mangum.html  orm.html  polyfactory.html  python.html  shellscript.html  sqladmin.html  sqlalchemy.html  sqlite.html  sqlspec.html  サーハーサイトレンタリンク.html  ツール.html  便利ツール.html  管理者画面.html  非同期処理.html
scripts/: update_ogp_cards.py
source/: blog.rst  conf.py  contact.rst  index.rst  nagasaki-tech-calendar.rst
source/_ext/: ogp_card_directive.py  ogp_generator.py  twitter_directive.py
source/_extra/: ads.txt  robots.txt  sitemap.xml
source/_static/: custom.css
(+32 files in other folders)
